--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "react-dom": "^17.0.2",
     "vite": "^2.3.8",
     "@project-serum/anchor": "^0.18.0",
-    "@solana/web3.js": "^1.30.2"
+    "@solana/web3.js": "~1.30.2"
   }
 }
