--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "ReplitReactjsProject",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "dependencies": {
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^17.0.8",
-    "@vitejs/plugin-react-refresh": "^1.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "vite": "^2.3.8",
-    "@project-serum/anchor": "^0.18.0",
-    "@solana/web3.js": "~1.30.2"
-  }
+	"name": "ReplitReactjsProject",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"dependencies": {
+		"@project-serum/anchor": "~0.18.0",
+		"@rollup/plugin-inject": "^4.0.4",
+		"@solana/web3.js": "~1.30.2",
+		"@types/react": "^17.0.13",
+		"@types/react-dom": "^17.0.8",
+		"@vitejs/plugin-react-refresh": "^1.3.0",
+		"buffer": "^6.0.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"vite": "^2.3.8"
+	}
 }
